Adding an about me page with different sections

--- a/about.qmd
+++ b/about.qmd
@@ -1,8 +1,16 @@
 ---
 title: "About Me"
-listing:
-  contents: posts
-  sort: "date desc"
-  type: default
-  categories: true
+format:
+  html:
+    toc: true
+---
+
+# About Me
+
+## Education
+
+## Professional Experience
+
+## Skills
+
 ---
