--- a/about.qmd
+++ b/about.qmd
@@ -5,9 +5,14 @@ format:
     toc: true
 ---
 
-# About Me
-
 ## Education
+
+**Bachelor of Science, Environmental Studies
+Concentration in marine biology**  
+<span class="school">University of California, Santa Barbara</span>
+
+**UC Education Abroad Program, Marine Biology and Terrestrial Ecology**  
+<span class="school">The University of Queensland</span>
 
 ## Professional Experience
 
