Hoping this will help it show up on my website

--- a/about.qmd
+++ b/about.qmd
@@ -7,14 +7,14 @@ format:
 
 ## Education
 
-**Bachelor of Science, Environmental Studies**
-*Concentration in marine biology*
-<span class="school">University of California, Santa Barbara</span>
+## Education
 
-<br>
+**Bachelor of Science, Environmental Studies**  
+*Concentration in marine biology*  
+University of California, Santa Barbara
 
 **UC Education Abroad Program, Marine Biology and Terrestrial Ecology**  
-<span class="school">The University of Queensland</span>
+The University of Queensland
 
 ## Professional Experience
 
