fixing my education section

--- a/about.qmd
+++ b/about.qmd
@@ -7,14 +7,12 @@ format:
 
 ## Education
 
-## Education
-
-**Bachelor of Science, Environmental Studies**  
-*Concentration in marine biology*  
+Bachelor of Science, Environmental Studies
+Concentration in Marine Biology
 University of California, Santa Barbara
 
-**UC Education Abroad Program, Marine Biology and Terrestrial Ecology**  
-The University of Queensland
+UC Education Abroad Program, Marine Biology and Terrestrial Ecology
+The University of Queensland, Australia
 
 ## Professional Experience
 
