--- a/about.qmd
+++ b/about.qmd
@@ -6,7 +6,7 @@ format: html
 ## Education
 
 ### Bachelor of Science, Environmental Studies
-Concentration in Marine Biology
+Concentration in Marine Biology<br>
 *University of California, Santa Barbara*
 
 ### UC Education Abroad Program, Marine Biology and Terrestrial Ecology
