Including information about my role as surfrider president

--- a/about.qmd
+++ b/about.qmd
@@ -9,6 +9,10 @@ format: html
 
 Concentration in Marine Biology<br> September 2022 - June 2026<br> *University of California, Santa Barbara*
 
+-   Honors college<br>
+
+-   Environmental studies program scholarship recepient
+
 ### UC Education Abroad Program, Marine Biology and Terrestrial Ecology
 
 August - November 2024<br> *The University of Queensland, Australia*<br> During this three month program, I gained valuable research and field study experience. I completed two research projects- one focused on fish-feeding patterns and the other on microplastic deposition in sediment. You can find more details about these studies in the projects tab. I also conducted field work in Lamington National Park and Carnarvon Gorge, where I developed practical skills such as species identification, quadrat sampling, and transect surveys.
@@ -23,7 +27,17 @@ The Surfrider Foundation is a nonprofit organization dedicated to the protection
 
 ## President, Isla Vista Student Club
 
-The Surfrider Foundation Isla Vista club is one of the most active Surfrider student clubs in the world, and among the largest environmental organizations at UCSB. Our club is made up of 125 members and 9 committees.
+The Surfrider Foundation Isla Vista club is one of the most active Surfrider student clubs in the world, and among the largest environmental organizations at UCSB. Our club is made up of 125 members and 9 committees. I served as vice president for a year before being elected co-president. My duties and accomplishments in this role include:
+
+-   Increasing club membership by 20% during my vice presidency
+
+-   Collaborating with local brand Island View Outfitters to create a Surfrider-themed collection to raise awareness and funds for our cause
+
+-   Helping to collect over 1,000 dollars worth of prizes for our annual Concert for the Coast fundraiser
+
+-   Planning speaker events with famous world champion surfers, local business owners, and artists
+
+-   Handling club communications, outreach to local businesses and national partners, and recruitment in the fall
 
 ## Professional Experience
 
