--- a/posts/myworkwiththesurfriderfoundation.qmd
+++ b/posts/myworkwiththesurfriderfoundation.qmd
@@ -1,6 +1,7 @@
 ---
-title: "MyWorkWiththeSurfriderFoundation"
+title: "My Work With the Surfrider Foundation"
 categories: [career, surfrider]
+image: media/capitol.jpeg
 date: 5/15/25
 date modified: 
 theme: minty
