--- a/posts/skillsandcertifications.qmd
+++ b/posts/skillsandcertifications.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Skills and Certifications"
 categories: [education]
+image: media/snorkel.jpeg
 date: 5/15/25
 date modified: 
 theme: minty
