--- a/posts/education.qmd
+++ b/posts/education.qmd
@@ -2,6 +2,7 @@
 title: "Education"
 categories: [education]
 image: media/shark.jpeg
+thumbnail: media/shark.jpeg
 date: 5/15/25
 date modified: 
 theme: minty
