--- a/posts/professionalexperience.qmd
+++ b/posts/professionalexperience.qmd
@@ -3,6 +3,7 @@ title: "Professional Experience"
 description: My experiences related to the sustainability, conservation, and ocean accessibilty field, outside of my work with the Surfrider Foundation. 
 categories: [experience, sustainability, work, career]
 image: media/sealeague.jpeg
+thumbnail: media/sealeague.jpeg
 date: 5/15/25
 date modified: 
 theme: minty
