--- a/posts/myworkwiththesurfriderfoundation.qmd
+++ b/posts/myworkwiththesurfriderfoundation.qmd
@@ -1,8 +1,8 @@
 ---
 title: "My Work With the Surfrider Foundation"
 categories: [career, surfrider]
-image: media/capitol.jpeg
-thumbnail: media/capitol.jpeg
+image: capitol.jpeg
+thumbnail: capitol.jpeg
 date: 5/15/25
 date modified: 
 theme: minty
