--- a/posts/skillsandcertifications.qmd
+++ b/posts/skillsandcertifications.qmd
@@ -1,8 +1,8 @@
 ---
 title: "Skills and Certifications"
 categories: [education]
-image: media/snorkel.jpeg
-thumbnail: media/snorkel.jpeg
+image: snorkel.jpeg
+thumbnail: snorkel.jpeg
 date: 5/15/25
 date modified: 
 theme: minty
