Adding a link to my paper

--- a/posts2/stradbroke.qmd
+++ b/posts2/stradbroke.qmd
@@ -13,3 +13,5 @@ While studying abroad at the University of Queensland, I had the opportunity to 
 The project studied the concentration of microplastics in sediment cores to determine whether the deposition in sediment has increased over time.
 
 Please read the paper below to find out more.
+
+[Access Paper Here](papers/MaryHoltamMoretonBayResearch.prf)\
