--- a/docs/posts2/howImadethiswebsite.qmd
+++ b/docs/posts2/howImadethiswebsite.qmd
@@ -8,3 +8,7 @@ date: 5/28/25
 date modified: 
 theme: minty
 ---
+
+Thank you so much for visiting my website!!
+
+I coded this website myself using Quarto and R-Studio. I learned these skills in my Statistics for Environmental Science class at UC Santa Barbara, ENVS193DS. Thank you to An Bui and Thuy-Tien Bui for their mentorship and support in building this website!
