--- a/posts2/stradbroke.qmd
+++ b/posts2/stradbroke.qmd
@@ -15,4 +15,10 @@ The project studied the concentration of microplastics in sediment cores to dete
 
 Please read the paper below to find out more.
 
+<iframe src="papers/MaryHoltamMoretonBayResearch.pdf" width="100%" height="600px">
+
+This browser does not support PDFs. Please download the PDF to view it: <a href="papers/MaryHoltamMoretonBayResearch.pdf">Download PDF</a>.
+
+</iframe>
+
 [Access Paper Here](papers/MaryHoltamMoretonBayResearch.pdf)
