--- a/docs/posts2/heronresearch.qmd
+++ b/docs/posts2/heronresearch.qmd
@@ -14,3 +14,5 @@ While studying abroad at the University of Queensland, I lived at the university
 My paper is embedded below. Read on if interested!
 
 [Paper Embedded Here](papers/MaryHoltamHeronIslandresearch.pdf)
+
+\<iframe src=MaryHoltamHeronIslandResearch.pdf" width="100%" height="100%"\>\</iframe\>
