--- a/posts2/heronresearch.qmd
+++ b/posts2/heronresearch.qmd
@@ -7,12 +7,13 @@ description: Effects of man-made sea wall on fish mobility and feeding patterns 
 date: 5/15/25
 date modified: 
 theme: minty
+<iframe src=MaryHoltamHeronIslandResearch.pdf" width="100%" height="100%"></iframe>
 ---
+
+\<iframe src=MaryHoltamHeronIslandResearch.pdf" width="100%" height="100%"\>\</iframe\>
 
 While studying abroad at the University of Queensland, I lived at the university owned Heron Island research station. While here, I conducted my own research project looking at the effects on fish mobility and feeding patterns of a man-made sea wall that was added to the Great Barrier Reef.
 
 My paper is embedded below. Read on if interested!
 
 [Paper Embedded Here](papers/MaryHoltamHeronIslandresearch.pdf)
-
-\<iframe src=MaryHoltamHeronIslandResearch.pdf" width="100%" height="100%"\>\</iframe\>
