--- a/docs/posts2/heronresearch.qmd
+++ b/docs/posts2/heronresearch.qmd
@@ -13,6 +13,6 @@ While studying abroad at the University of Queensland, I lived at the university
 
 My paper is embedded below. Read on if interested!
 
-[Paper Embedded Here](papers/MaryHoltamHeronIslandresearch.pdf)
+<iframe src="posts2/MaryHoltamHeronIsland2023.pdf" width="100%" height="600px"></iframe>
 
-\<iframe src=MaryHoltamHeronIslandResearch.pdf" width="100%" height="100%"\>\</iframe\>
+[Paper Embedded Here](papers/MaryHoltamHeronIslandresearch.pdf)
