--- a/posts2/stradbroke.qmd
+++ b/posts2/stradbroke.qmd
@@ -3,11 +3,15 @@ title: "North Stradbroke Research Project"
 categories: [research]
 image: straddy.jpg
 thumbnail: straddy.jpg
-description: Distribution of microplastics in sediment cores to determine whether the deposition in sediment has increased over time. 
+description: Studied the distribution of microplastics in sediment cores to determine whether the deposition in sediment has increased over time. 
 date: 5/15/25
 date modified: 
 theme: minty
 ---
+
+```         
+![Straddy](posts2/straddy.jpg)
+```
 
 While studying abroad at the University of Queensland, I had the opportunity to complete a research project while staying at the Moreton Bay Research Station on Minjerribah, North Stradbroke Island, Queensland.
 
