--- a/surfandtravel.qmd
+++ b/surfandtravel.qmd
@@ -10,5 +10,5 @@ ADD IN INTERACTIVE MAP OF EVERYWHERE I HAVE SURFED
 -encinitas, cardiff, carlsbad, del mar, la saladita, santa barbara, IV, ventura, rincon, malibu, trestles, santa cruz, morro bay, crescent head, north stradbroke island, noosa, angourie heads, piha, waipu cove, raglan, mount manganui, gisborne, nosara, maine, rhode island
 
 ::: {.grid columns="3"}
-![](img1.jpg) ![](img2.jpg) ![](img3.jpg) ![](img4.jpg) ![](img5.jpg) ![](img6.jpg)
+![](img1.jpg) ![](img2.jpg) ![](img4.jpg) ![](img5.jpg) ![](img6.jpg)
 :::
