--- a/posts2/heronresearch.qmd
+++ b/posts2/heronresearch.qmd
@@ -13,8 +13,8 @@ While studying abroad at the University of Queensland, I lived at the university
 
 My paper is embedded below. Read on if interested!
 
-<iframe src="posts2/MaryHoltamHeronIslandResearch.pdf" width="100%" height="600px">
+<iframe src="MaryHoltamHeronIslandResearch.pdf" width="100%" height="600px" style="border:none;">
+
+<a href="research_essay.pdf">Download PDF</a>.
 
 </iframe>
-
-
