Adding surfrider image and more information to resume

--- a/resume.qmd
+++ b/resume.qmd
@@ -29,6 +29,12 @@ Sep 2022- Mar 2024<br>
 
 Helps to reduce the plastic pollution of the UC Santa Barbara and Isla Vista community through beach cleanups, advocacy, and community events. Organized a petition in support of reduced plastic usage at the UCSB dining halls. Weekly meetings to work to accomplish these goals.
 
+#### Ocean Friendly Restaurants Volunteer
+
+June 2023 - present
+
+Visits and contacts restaurants in San Diego County to inform them about the Ocean Friendly Restaurants program which helps transition eateries to more sustainable practices. Tables at events such as beach cleanups to bring awareness to this committee. Acted in a training video that is shown to future volunteers.
+
 ### Rob Machado Foundation
 
 #### Environmental Outreach and Administration Intern
