Adding images to my blog posts

--- a/posts2/heronresearch.qmd
+++ b/posts2/heronresearch.qmd
@@ -9,6 +9,8 @@ date modified:
 theme: minty
 ---
 
+![](heronresearch.jpg){width="100%" fig-align="center"}
+
 While studying abroad at the University of Queensland, I lived at the university owned Heron Island research station. While here, I conducted my own research project looking at the effects on fish mobility and feeding patterns of a man-made sea wall that was added to the Great Barrier Reef.
 
 My paper is embedded below. Read on if interested!
