--- a/posts/professionalexperience.qmd
+++ b/posts/professionalexperience.qmd
@@ -11,6 +11,8 @@ theme: minty
 
 ## Professional Experience
 
+![](sealeague.jpeg){width="100%" fig-align="center"}
+
 ### Rob Machado Foundation
 
 #### Environmental Outreach and Administration Intern
