--- a/posts/skillsandcertifications.qmd
+++ b/posts/skillsandcertifications.qmd
@@ -11,6 +11,8 @@ theme: minty
 
 ## Skills and Certifications
 
+![](snorkel.jpeg){width="100%" fig-align="center"}
+
 ### Relevant Skills
 
 Coding in R, field research, microscope use, working with children, science communication, community outreach, social media management, public speaking, and Spanish
