--- a/posts2/howImadethiswebsite.qmd
+++ b/posts2/howImadethiswebsite.qmd
@@ -13,4 +13,14 @@ theme: minty
 
 Thank you so much for visiting my website!!
 
-I coded this website myself using Quarto and R-Studio. I learned these skills in my Statistics for Environmental Science class at UC Santa Barbara, ENVS193DS. Thank you to An Bui and Thuy-Tien Bui for their mentorship and support in building this website!
+I coded this website myself using Quarto and R-Studio. I learned these skills in my Statistics for Environmental Science class at UC Santa Barbara, ENVS193DS. I believe having these coding skills will be very helpful when working in environmental jobs in the future. Thank you to An Bui and Thuy-Tien Bui for their mentorship and support in building this website!
+
+Here is an example of some code and its output from another assignment in this course:
+
+<iframe src="CodePhotos.pdf" width="100%" height="600px" style="border:none;">
+
+<a href="codephotos.pdf">Download PDF</a>.
+
+</iframe>
+
+This code shows how I created a box plot in R for a homework assignment earlier in the course. In this box plot, I am comparing my daily step count to the day of the week. I began this research project the first week of spring quarter, recording how many steps I took each day. I kept track of the day of the week, along with other factors such as the weather, whether or not I had work that day or had completed another workout, and how many hours I had class that day. However, in this box plot, I just compared my step count with the day of the week. I was interested in discovering how much my step count varies from day to day depending on which weekday it is. The information gathered from this box plot was quite interesting, as I had the greatest amount of steps on Friday, Saturday, and Sunday. I do not have class on these days, so I would have expected to have a higher number of steps on days that I do have class as I am walking to and from campus a lot. However, it makes sense that on my days off I would have more time to go on long walks and would not be sitting down for prolonged periods of time. It was a very fun project!
